--- a/views/localbusiness/index.html.twig
+++ b/views/localbusiness/index.html.twig
@@ -3,10 +3,7 @@
 {% block title %}At Homes{% endblock %}
 
 {% block Navbar %}
-  <a class="navbar-brand" href="index.php">At Homes</a>
-  {% if mapNumber %}
-  <button onclick="loadMapDetails({{ mapNumber }})" class="nav-link btn btn-outline-light" data-toggle="collapse" href="#map-{{ mapNumber }}-info" role="button" aria-expanded="false" aria-controls="map-{{ mapNumber }}-info" ic-get-from="mapDetails.php?Map={{ mapNumber }}" ic-target="#mapDetails">Map {{ mapNumber }}</button>
-  {% endif %}
+  <a class="navbar-brand" href="../index.php">At Homes</a>
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>          
   </button>
@@ -19,9 +16,6 @@
         <!--<li class="nav-item">
         <a class="nav-link" href="phone">Phone Calls</a>
         </li>-->
-        <li class="nav-item">
-          <a class="nav-link" href="localbusiness">Local Businesses</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="localbusiness/add-business.php">Add a local business</a>
         </li>
@@ -91,14 +85,11 @@
 {% endif %} 	
 
 {% if availableMaps %}
-  {% include 'availableMaps.twig' %}
+  {% include 'localbusiness/availableMaps.twig' %}
 {% endif %} 
 
-{% if addresses %}
-  <div class="text-center">
-    <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
-  </div> 
-  {% include 'addressList.twig' %}
+{% if localbusinesses %}
+  {% include 'localbusiness/businessList.twig' %}
 {% elseif blockNumber %}
   <div class="text-center">
     <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
