--- a/views/modal-forms.twig
+++ b/views/modal-forms.twig
@@ -197,6 +197,54 @@
   </div>
 </div>
 
+<!-- Modal  to add a business -->
+<div class="modal fade" id="exampleModal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add a business</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="" action="" method="post">
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="businessName" value="" aria-describedby="emailHelp" placeholder="Enter business name">
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="address" value="" aria-describedby="emailHelp" placeholder="Enter address">
+            <small id="emailHelp" class="form-text text-muted">Street address only. No need to add suburb.</small>
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="contactEmail" value="" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">Email address not website.</small>
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="contactName" value="" aria-describedby="emailHelp" placeholder="Enter name of person to contact">
+          </div>
+            
+          <div class="form-group">
+            <input type="text" class="form-control" name="FormSubmissionUser" value="" aria-describedby="emailHelp" placeholder="Enter your name">
+          </div>
+          
+        </div>
+
+      <div class="modal-footer">
+        <input type="hidden" name="map" value="5">
+        <input type="hidden" name="block" value="4">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-outline-primary" name="addLocalBusiness">Save</button>
+      </div>
+
+      </form>
+    </div>
+  </div>
+</div>
 
 <script>
 // Example starter JavaScript for disabling form submissions if there are invalid fields
