--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -19,7 +19,10 @@
         <!--<li class="nav-item">
         <a class="nav-link" href="phone">Phone Calls</a>
         </li>-->
-         <li class="nav-item">
+        <li class="nav-item">
+        <a class="nav-link" href="localbusiness">Local Businesses</a>
+        </li>
+        <li class="nav-item">
         <a class="nav-link" href="admin/?Filter=assigned">Admin</a>
         </li>
         <li class="nav-item">
