--- a/views/modal-forms.twig
+++ b/views/modal-forms.twig
@@ -229,7 +229,7 @@
           </div>
             
           <div class="form-group">
-            <input type="text" class="form-control" name="FormSubmissionUser" value="" aria-describedby="emailHelp" placeholder="Enter your name">
+            <input type="text" class="form-control" name="FormSubmissionUser" value="{{ user }}" aria-describedby="emailHelp" placeholder="Enter your name">
           </div>
           
         </div>
