--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -23,6 +23,9 @@
         <a class="nav-link" href="localbusiness">Local Businesses</a>
         </li>
         <li class="nav-item">
+        <li class="nav-item">
+        <a class="nav-link" href="territory-overview">Territory Overview</a>
+        </li>
         <a class="nav-link" href="admin/?Filter=assigned">Admin</a>
         </li>
         <li class="nav-item">
