--- a/views/localbusiness/availableMaps.twig
+++ b/views/localbusiness/availableMaps.twig
@@ -1,3 +1,9 @@
+{% for map in availableMaps %}
+  {% if loop.first %}
+    <h5 class="m-2">{{ map.sBusinessTotal }} Local Businesses</h5>
+  {% endif %}
+{% endfor %}
+
 <!-- Consider using list group button or link instead -->
   <ul class="list-group">
 	{% for map in availableMaps %}
@@ -14,9 +20,13 @@
 	      </a>
 	    {% endif %}
 	    <span class="ml-1"><i class="fas fa-store"></i></span>
+	    <span class="badge badge-secondary">{{ map.cBusinessSum }}</span>
 
 	    
 	  	<div class="float-right"><span class="badge badge-{{ map.Colour }}">{{ map.Suburb }}</span></div>
 	  </li>
 	{% endfor %}
    </ul>
+
+
+   sBusinessTotal
