--- a/views/localbusiness/businessList.twig
+++ b/views/localbusiness/businessList.twig
@@ -1,31 +1,3 @@
-<!-- Nav: block, street and filter -->  
- <ul class="nav">
-    <li class="nav-item">
-      <a class="btn btn-outline-secondary" href="?Map={{ mapNumber }}" role="button">Map {{ mapNumber}}</a>
-    </li>
-  <li class="nav-item">
-    <div class="dropdown">
-      <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Block {{ blockNumber}}
-      </a>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      {% for mapBlock in mapBlocks %}
-        <a class="dropdown-item" href="?Map={{ mapNumber }}&Block={{ mapBlock.Block }}&Filter={{ Filter }}">
-          Block {{ mapBlock.Block }}
-        </a>
-      {% endfor %} 
-        </div>
-    </div>
-  </li>
-
-  <li class="nav-item">
-    <a class="btn btn-outline-secondary" href="#exampleModal4" data-toggle="modal" data-target="#exampleModal4"><span><i class="fas fa-plus"></i></span></a>
-  </li>
-</ul>
-
-
-
-
 <ul class="list-group">
   {% for localbusiness in localbusinesses %}
       <li id="{{ localbusiness.id }}" class="list-group-item">
@@ -37,6 +9,8 @@
 
 
           <div class="card-header p-2 pb-2">
+
+            <h4>Edit</h4>
           
           <form class="form-inline" ic-post-to="business.php" ic-target="#foo-{{ localbusiness.id }}">
             <input type="hidden" name="id" value="{{ localbusiness.id }}">
@@ -73,6 +47,8 @@
             
           </form>
 
+          <h4>Assign</h4>
+
           <div class="mt-3" id="{{ address.recID }}-phone-numbers">
             <i id="demo-spinner-{{ address.recID }}" class="fa fa-spinner fa-spin" style="display:none"></i>
           </div>          
@@ -84,7 +60,6 @@
       </li>
   {% endfor %}
 
-  {% include 'modal-forms.twig' %}
 </ul>
 
           
