new target URL and div

--- a/views/localbusiness/businessList.twig
+++ b/views/localbusiness/businessList.twig
@@ -76,4 +76,12 @@
 
 </ul>
 
+ <!--<button class="btnn" data-clipboard-text="foo">
+    Copy
+</button>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
+  <script>
+    new ClipboardJS('.btnn');
+  </script>
+
           
