--- a/views/localbusiness/businessList.twig
+++ b/views/localbusiness/businessList.twig
@@ -63,6 +63,8 @@
             </form>
           </div>
 
+          <h4 class="mt-4">Status</h4>
+
           <div class="mt-3" id="{{ address.recID }}-phone-numbers">
             <i id="demo-spinner-{{ address.recID }}" class="fa fa-spinner fa-spin" style="display:none"></i>
           </div>          
