--- a/views/modal-forms.twig
+++ b/views/modal-forms.twig
@@ -227,6 +227,10 @@
           <div class="form-group">
             <input type="text" class="form-control" name="contactName" value="" aria-describedby="emailHelp" placeholder="Enter name of person to contact">
           </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="phone" value="" aria-describedby="phone" placeholder="Enter phone number">
+          </div>
             
           <div class="form-group">
             <input type="text" class="form-control" name="FormSubmissionUser" value="{{ user }}" aria-describedby="emailHelp" placeholder="Enter your name">
