--- a/views/localbusiness/availableMaps.twig
+++ b/views/localbusiness/availableMaps.twig
@@ -21,12 +21,10 @@
 	    {% endif %}
 	    <span class="ml-1"><i class="fas fa-store"></i></span>
 	    <span class="badge badge-secondary">{{ map.cBusinessSum }}</span>
+	    <small class="text-muted">{{ map.campaignAssignee }}</small>
 
 	    
 	  	<div class="float-right"><span class="badge badge-{{ map.Colour }}">{{ map.Suburb }}</span></div>
 	  </li>
 	{% endfor %}
    </ul>
-
-
-   sBusinessTotal
