change URL for territory map image

--- a/views/localbusiness/index.html.twig
+++ b/views/localbusiness/index.html.twig
@@ -92,7 +92,7 @@
   <h3 class="m-2">Map {{ mapNumber }}</h3>
   {% include 'localbusiness/mapBlocks.twig' %}
   <div class="text-center">
-    <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
+    <img src="https://raw.githubusercontent.com/skyricho/skyricho.github.io/master/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
   </div>
 {% endif %} 
 
