--- a/views/localbusiness/businessList.twig
+++ b/views/localbusiness/businessList.twig
@@ -5,7 +5,7 @@
         <a data-toggle="collapse" href="#revert-{{ localbusiness.id }}" role="button" aria-expanded="false" aria-controls="revert-{{ localbusiness.id }}">
           {{ localbusiness.businessName|raw }}
         </a>
-        <div class="float-right" id="{{ localbusiness.id }}-status"><span class="badge badge-secondary">{{ localbusiness.status }}</span></div>
+        <div class="float-right" id="{{ localbusiness.id }}-status"><span class="small">{{ localbusiness.assignee }}</span></div>
         <div class="collapse card mt-2 mb-2" id="revert-{{ localbusiness.id }}">
 
 
