--- a/views/localbusiness/my-businessList.twig
+++ b/views/localbusiness/my-businessList.twig
@@ -1,89 +1,49 @@
 <ul class="list-group">
   {% for localbusiness in localbusinesses %}
-      <li id="{{ localbusiness.id }}" class="list-group-item">
-        <span><i class="fas fa-check-circle" style="color: {{ localbusiness.badgeColor }}"></i></span>
-        <a data-toggle="collapse" href="#revert-{{ localbusiness.id }}" role="button" aria-expanded="false" aria-controls="revert-{{ localbusiness.id }}">
-          {{ localbusiness.businessName|raw }}
-        </a>
-        <div class="float-right" id="{{ localbusiness.id }}-status"><span class="badge badge-secondary">{{ localbusiness.status }}</span></div>
-        <div class="collapse card mt-2 mb-2" id="revert-{{ localbusiness.id }}">
-
-
-          <div class="card-header p-2 pb-2">
-
-            <h4 class="mt-4">Status</h4>
-              <div id="status-{{ localbusiness.id }}">
-
-                <form class="form-inline" ic-post-to="status.php" ic-target="#status-{{ localbusiness.id }}">
-                  <input type="hidden" name="id" value="{{ localbusiness.id }}">
-                  <div class="input-group mb-3">
-                    <select class="custom-select" id="inputGroupSelect02" name="status">
-                      <option selected>{{ localbusiness.status }}</option>
-                      <option value="Letter sent">Letter sent</option>
-                      <option value="Email sent">Email sent</option>
-                      <option value="">Reset</option>
-                    </select>
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary">Save</button>
-                    </div>   
-                  </div>
-                </form>
-
-              </div>
-
-
-            <h4>Edit</h4>
-          
-          <form class="form-inline" ic-post-to="business.php" ic-target="#foo-{{ localbusiness.id }}">
-            <input type="hidden" name="id" value="{{ localbusiness.id }}">
-            <input class="form-control" type="text" placeholder="Business Name" name="businessName" value="{{ localbusiness.businessName|raw }}">
-            <input class="form-control" type="text" placeholder="Add address" name="address" value="{{ localbusiness.streetAddressRaw }}">
-            <input class="form-control" type="text" placeholder="Add email" name="contactEmail" value="{{ localbusiness.contactEmail }}">
-            <input class="form-control" type="text" placeholder="Add name of manager" name="contactName" value="{{ localbusiness.contactName|raw }}">
-            <input class="form-control" type="text" placeholder="Add phone number" name="phone" value="{{ localbusiness.phone|raw }}">
-
-              <div class="input-group mt-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">Map</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Map number" name="map" value="{{ localbusiness.map }}" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">Block</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Block number" name="block" value="{{ localbusiness.block }}" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">User</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Your name" name="user" value="{{ localbusiness.formSubmissionUser }}" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-                    <div class="mt-3">
-        <button type="submit" class="btn btn-outline-primary" name="update">Save</button><span class="ml-3" id="foo-{{ localbusiness.id }}"></span>
+    <li id="{{ localbusiness.id }}" class="list-group-item">
+      <span><i class="fas fa-check-circle" style="color: {{ localbusiness.badgeColor }}"></i></span>
+      <a data-toggle="collapse" href="#revert-{{ localbusiness.id }}" role="button" aria-expanded="false" aria-controls="revert-{{ localbusiness.id }}">
+        {{ localbusiness.businessName|raw }}
+      </a>{% if localbusiness.contactEmail %}<span><i class="fas fa-at"></i></i></span>{% endif %}
+      <div class="float-right" id="{{ localbusiness.id }}-status">
+        <span class="badge badge-secondary">{{ localbusiness.status }}</span>
       </div>
-
-            
-          </form>
-
-          
-
-          
-
-
-          <div class="mt-3" id="{{ address.recID }}-phone-numbers">
-            <i id="demo-spinner-{{ address.recID }}" class="fa fa-spinner fa-spin" style="display:none"></i>
-          </div>          
-         
-       
-          </div>
         
-        </div>  
-      </li>
+      <div class="collapse card mt-2 mb-2" id="revert-{{ localbusiness.id }}">
+        <div class="card-header p-2 pb-2">
+          {% if localbusiness.contactName %}{{ localbusiness.contactName }}<br>{% endif %}
+          {% if localbusiness.contactEmail %}<a href="mailto:{{ localbusiness.contactEmail }}">{{ localbusiness.contactEmail }}</a><br>{% endif %}
+          {% if localbusiness.phone %}{{ localbusiness.phone }}<br><br>{% endif %}
+          {% if localbusiness.streetAddressRaw %}{{ localbusiness.streetAddressRaw }}<br>{% endif %}
+          {% if localbusiness.secondLine %}{{ localbusiness.secondLine }}<br>{% endif %}
+          {% if localbusiness.thirdLine %}{{ localbusiness.thirdLine }}<br>{% endif %}
+          {% if localbusiness.fourthLine %}{{ localbusiness.fourthLine }}<br>{% endif %}
+          {% if localbusiness.note %}<small>{{ localbusiness.note|raw }}</small>{% endif %}
+
+
+          <h6 class="mt-4">Status</h6>
+          <div id="status-{{ localbusiness.id }}">
+
+            <form class="form-inline" ic-post-to="status.php" ic-target="#status-{{ localbusiness.id }}">
+              <input type="hidden" name="id" value="{{ localbusiness.id }}">
+              <div class="input-group mb-3">
+                <select class="custom-select" id="inputGroupSelect02" name="status">
+                  <option selected>{{ localbusiness.status }}</option>
+                  <option value="Letter sent">Letter sent</option>
+                  <option value="Email sent">Email sent</option>
+                  <option value="">Reset</option>
+                </select>
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary">Save</button>
+                </div>   
+              </div>
+            </form>
+          
+          </div>
+
+        </div>
+      </div>      
+    </li>
   {% endfor %}
 
 </ul>
