--- a/views/base.html
+++ b/views/base.html
@@ -10,6 +10,9 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
       <script src="https://kit.fontawesome.com/94cb094786.js" crossorigin="anonymous"></script> 
       <title>{% block title %}{% endblock %}</title>
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-cache" />
+      <meta http-equiv="Expires" content="0" />
     {% endblock %}
   </head>
   <body>
