--- a/views/housing_units.html.twig
+++ b/views/housing_units.html.twig
@@ -8,25 +8,14 @@
           <input type="hidden" name="notHome" value="">
           <input type="hidden" name="streetNumber" value="{{ streetNumber }}">
           <input type="hidden" name="housingUnitNumber" value="{{ housing_unit.Number }}">
-
-            <div class="d-flex justify-content-between text-muted">
-              <div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="{{ housing_unit.unitID }}-checkbox" ic-post-to="updateUnitStatus.php" ic-target="#{{ streetNumber }}-unit-{{ housing_unit.unitID }}" ic-confirm="Are you sure?" checked>
-                  <label class="form-check-label" for="defaultCheck1">
-                    Unit {{ housing_unit.Number }}        
-                  </label>
-                </div>
-              </div>
-              <div>
-                <i class="fas fa-mail-bulk"></i> Letter sent
-              </div>
-            </div>       
-            
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="{{ housing_unit.unitID }}-checkbox" ic-post-to="updateUnitStatus.php" ic-target="#{{ streetNumber }}-unit-{{ housing_unit.unitID }}" ic-confirm="Are you sure?" checked>
+            <label class="form-check-label" for="defaultCheck1">
+              Unit {{ housing_unit.Number }} {{ housing_unit.cStatus }}        
+            </label>
+          </div>
         </form>
       </li>
-
-      
   	{% elseif housing_unit.cStatus == 'dnc' %}
   	  <!-- DNC -->
   	  <li id="{{ streetNumber }}-unit-{{ housing_unit.unitID }}" class="list-group-item list-group-item-light">
