--- a/views/addressList.twig
+++ b/views/addressList.twig
@@ -109,8 +109,13 @@
         <a ic-get-from="HousingUnits.php?id={{ address.recID }}" ic-target="#{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units" href="#{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units">
           {{ address.streetNumber }} {{ address.streetName }}
         </a>
-        <span class="badge badge-light ml-1"><i class="far fa-building"></i> {{ address.cUnitsCount }} units</span>
+        {% if address.cUnitBlockContacted == 1 %}
+        <span class="badge badge-light ml-1">
+          <i class="far fa-building"></i> All units contacted</span>
         <span class="badge badge-pill badge-secondary ml-1">{{ address.UnitsNH }}</span>
+        {% else %}
+        <span class="badge badge-light ml-1"><i class="far fa-building"></i> {{ address.unitsNH }} units to contact</span>
+        {% endif %}
       </li>
       <div class="collapse" id="{{ address.streetNumber }}-{{ address.streetNameWithDash }}-units"></div>
     {% else %}
