Forget what these were

--- a/views/assignee-list.twig
+++ b/views/assignee-list.twig
@@ -60,7 +60,7 @@
 
             }
         };
-        xmlhttp.open("GET", "assignees.json", true);
+        xmlhttp.open("POST", "assignees.json", true);
         xmlhttp.send();
       </script>
  
