--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -51,29 +51,53 @@
     <figcaption class="figure-caption pl-2">2021 Memorial Invitation Campaign.</figcaption>
   </figure>
 
-  <nav>
+ 
+<nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
-    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Zac</a>
-    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Nick</a>
-    <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Shayne</a>
-    <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-foo" role="tab" aria-controls="nav-foo" aria-selected="false">Craig</a>
+    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
+    <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
+    <a class="nav-item nav-link" id="nav-craig-tab" data-toggle="tab" href="#nav-craig" role="tab" aria-controls="nav-craig" aria-selected="false">Craig</a>
   </div>
 </nav>
-<div class="tab-content mb-5" id="nav-tabContent">
-  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-    <div class="list-group">
-      <a href="my-list.php?name=Zac" class="list-group-item list-group-item-action">Zac</a>
-      <a href="my-list.php?name=Karen" class="list-group-item list-group-item-action">Karen</a>
-      <a href="#" class="list-group-item list-group-item-action">Mia</a>
-      <a href="#" class="list-group-item list-group-item-action">Dan</a>
-      <a href="#" class="list-group-item list-group-item-action disabled">Jacqueline</a>
-    </div>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">33534</div>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">ertetert</div>
+  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">sfsfsf
   </div>
-  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+   <div class="tab-pane fade" id="nav-craig" role="tabpanel" aria-labelledby="nav-craig-tab">
+        <div class="list-group">
+      <a href="my-list.php?name=Ivanna" class="list-group-item list-group-item-action">Ivanna</a>
+      <a href="my-list.php?name=Jono" class="list-group-item list-group-item-action">Jono</a>
+      <a href="my-list.php?name=Navara" class="list-group-item list-group-item-action">Navara</a>
+      <a href="my-list.php?name=Noemi" class="list-group-item list-group-item-action">Noemi</a>
+      <a href="my-list.php?name=Vin" class="list-group-item list-group-item-action">Vin</a>
+      <a href="my-list.php?name=Angie" class="list-group-item list-group-item-action">Angie</a>
+      <a href="my-list.php?name=Shannon" class="list-group-item list-group-item-action">Shannon</a>
+      <a href="my-list.php?name=Chess" class="list-group-item list-group-item-action">Chess</a>
+      <a href="my-list.php?name=Pat" class="list-group-item list-group-item-action">Pat</a>
+      <a href="my-list.php?name=Juanita" class="list-group-item list-group-item-action">Juanita</a>
+      <a href="my-list.php?name=Craig" class="list-group-item list-group-item-action">Craig</a>
+      <a href="my-list.php?name=Justin" class="list-group-item list-group-item-action">Justin</a>
+      <a href="my-list.php?name=Abigail" class="list-group-item list-group-item-action">Abigail</a>
+      <a href="my-list.php?name=Elizabeth" class="list-group-item list-group-item-action">Elizabeth</a>
+      <a href="my-list.php?name=Lisa" class="list-group-item list-group-item-action">Lisa</a>
+      <a href="my-list.php?name=Mikaela" class="list-group-item list-group-item-action">Mikaela</a>
+      <a href="my-list.php?name=Ning" class="list-group-item list-group-item-action">Ning</a>
+      <a href="my-list.php?name=Pauline" class="list-group-item list-group-item-action">Pauline</a>
+      <a href="my-list.php?name=Bel" class="list-group-item list-group-item-action">Bel</a>
+      <a href="my-list.php?name=Zach" class="list-group-item list-group-item-action">Zach</a>
+      <a href="my-list.php?name=Callan" class="list-group-item list-group-item-action">Callan</a>
+      <a href="my-list.php?name=Karleen" class="list-group-item list-group-item-action">Karleen</a>
+      <a href="my-list.php?name=Ayden" class="list-group-item list-group-item-action">Ayden</a>
+      <a href="my-list.php?name=Hannah" class="list-group-item list-group-item-action">Hannah</a>
+      <a href="my-list.php?name=Roger" class="list-group-item list-group-item-action">Roger</a>
+      <a href="my-list.php?name=Extra" class="list-group-item list-group-item-action">Extra</a>
+    </div>
+   </div>
 </div>
 
-<h4 class="pl-2">Map's That Are Checked Out</h4>
+<!--<h4 class="pl-2">Map's That Are Checked Out</h4>-->
 	<!-- Map image and info -->
 	<div class="collapse" id="map-{{ mapNumber }}-info">
 
@@ -120,7 +144,7 @@
 {% endif %} 	
 
 {% if foo %}
-  {% include 'assignee-list.twig' %}
+  <!--{% include 'assignee-list.twig' %}-->
 {% elseif availableMaps %}
   {% include 'availableMaps.twig' %}
 {% elseif addresses %}
