--- a/views/phone/index.html.twig
+++ b/views/phone/index.html.twig
@@ -73,6 +73,7 @@
 {% endif %}
 
 {% if availableMaps %}
+  <h3 class="ml-4 mt-4">Phone Maps</h3>
   {% include 'availableMaps.twig' %}
 {% endif %} 	
 
