Uodate links to publishers

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -73,7 +73,7 @@
       <a href="my-list.php?name=Callum" class="list-group-item list-group-item-action">Callum</a>
       <a href="my-list.php?name=Lucas" class="list-group-item list-group-item-action">Lucas</a>
       <a href="my-list.php?name=Jacqueline-E" class="list-group-item list-group-item-action">Jacqueline</a>
-      <a href="my-list.php?name=Georgia" class="list-group-item list-group-item-action">Georgia</a>
+      <a href="my-list.php?name=GeorgiaS" class="list-group-item list-group-item-action">Georgia</a>
       <a href="my-list.php?name=Indiana" class="list-group-item list-group-item-action">Indiana</a>
       <a href="my-list.php?name=Karl" class="list-group-item list-group-item-action">Karl</a>
       <a href="my-list.php?name=Talitha" class="list-group-item list-group-item-action">Talitha</a>
@@ -92,7 +92,7 @@
     <div class="list-group">
       <a href="my-list.php?name=Alison" class="list-group-item list-group-item-action">Alison</a>
       <a href="my-list.php?name=Faz" class="list-group-item list-group-item-action">Faz</a>
-      <a href="my-list.php?name=Georgia" class="list-group-item list-group-item-action">Georgia</a>
+      <a href="my-list.php?name=GeorgiaK" class="list-group-item list-group-item-action">Georgia</a>
       <a href="my-list.php?name=Olivia" class="list-group-item list-group-item-action">Olivia</a>
       <a href="my-list.php?name=Mathias" class="list-group-item list-group-item-action">Mathias</a>
       <a href="my-list.php?name=Jenny" class="list-group-item list-group-item-action">Jenny</a>
