--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -50,10 +50,10 @@
 
 <img src="img/memorial-2021.png" class="img-fluid" alt="A picture of Jesus using his arms to warmly direct us the way to go.">
 <div class="bg-dark">
-  <h6 class="text-white p-3 text-center">2021 Memorial Invitation Campaign</h6>
-        <!--<div class="text-center">
-          <span class="badge badge-light mb-2">x letters sent</span>
-        </div>-->
+  <h6 class="text-white pt-3 text-center">2021 Memorial Invitation Campaign</h6>
+        <div class="text-center">
+          <span class="badge badge-light mb-2" ic-get-from="getLettersSentTotal.php" ic-trigger-on="load"><i class="fa fa-spinner fa-spin"></i> letters sent</span>
+        </div>
 </div>
 
 
@@ -84,7 +84,7 @@
       <a href="my-list.php?name=Bianca" class="list-group-item list-group-item-action">Bianca</a>
       <a href="my-list.php?name=Anna" class="list-group-item list-group-item-action">Anna</a>
       <a href="my-list.php?name=Jun" class="list-group-item list-group-item-action">Jun</a>
-      <a href="my-list.php?name=Callum" class="list-group-item list-group-item-action">Callum</a>
+      <a href="my-list.php?name=Calum" class="list-group-item list-group-item-action">Calum</a>
       <a href="my-list.php?name=Lucas" class="list-group-item list-group-item-action">Lucas</a>
       <a href="my-list.php?name=Jacqueline-E" class="list-group-item list-group-item-action">Jacqueline</a>
       <a href="my-list.php?name=GeorgiaS" class="list-group-item list-group-item-action">Georgia</a>
@@ -98,7 +98,10 @@
       <a href="my-list.php?name=Jamie" class="list-group-item list-group-item-action">Jamie</a>
       <a href="my-list.php?name=Karen" class="list-group-item list-group-item-action">Karen</a>
       <a href="my-list.php?name=Mia" class="list-group-item list-group-item-action">Mia</a>
-      <a href="my-list.php?name=Zac" class="list-group-item list-group-item-action">Zac</a>
+      <a href="my-list.php?name=Dan" class="list-group-item list-group-item-action">Dan</a>
+      <a href="my-list.php?name=Jaqueline-H" class="list-group-item list-group-item-action">Jaqueline</a>
+      <a href="my-list.php?name=Lucia" class="list-group-item list-group-item-action">Lucia</a>
+      <a href="my-list.php?name=Viv" class="list-group-item list-group-item-action">Viv</a>
       <a href="my-list.php?name=Group-1-Extras" class="list-group-item list-group-item-action">Group 1 Extras</a>
     </div>
   </div>
@@ -139,7 +142,9 @@
       <a href="my-list.php?name=Colin" class="list-group-item list-group-item-action">Colin</a>
       <a href="my-list.php?name=Sam" class="list-group-item list-group-item-action">Sam</a>
       <a href="my-list.php?name=Amelie" class="list-group-item list-group-item-action">Amelie</a>
+      <a href="my-list.php?name=Slater" class="list-group-item list-group-item-action">Slater</a>
       <a href="my-list.php?name=Edna" class="list-group-item list-group-item-action">Edna</a>
+      <a href="my-list.php?name=Phil" class="list-group-item list-group-item-action">Phil</a>
       <a href="my-list.php?name=Brendon" class="list-group-item list-group-item-action">Brendon</a>
       <a href="my-list.php?name=Francis" class="list-group-item list-group-item-action">Francis</a>
       <a href="my-list.php?name=Bailey" class="list-group-item list-group-item-action">Bailey</a>
@@ -148,7 +153,7 @@
       <a href="my-list.php?name=Marty" class="list-group-item list-group-item-action">Marty</a>
       <a href="my-list.php?name=Jess" class="list-group-item list-group-item-action">Jess</a>
       <a href="my-list.php?name=Javier" class="list-group-item list-group-item-action">Javier</a>
-      <a href="my-list.php?name=Remi" class="list-group-item list-group-item-action">Remi</a>
+      <a href="my-list.php?name=Remy" class="list-group-item list-group-item-action">Remy</a>
       <a href="my-list.php?name=Kailey" class="list-group-item list-group-item-action">Kailey</a>
       <a href="my-list.php?name=Rie" class="list-group-item list-group-item-action">Rie</a>
       <a href="my-list.php?name=Yuuki" class="list-group-item list-group-item-action">Yuuki</a>
@@ -164,7 +169,7 @@
         <div class="list-group">
       <a href="my-list.php?name=Ivanna" class="list-group-item list-group-item-action">Ivanna</a>
       <a href="my-list.php?name=Jono" class="list-group-item list-group-item-action">Jono</a>
-      <a href="my-list.php?name=Navara" class="list-group-item list-group-item-action">Navara</a>
+      <a href="my-list.php?name=Nevarra" class="list-group-item list-group-item-action">Nevarra</a>
       <a href="my-list.php?name=Noemi" class="list-group-item list-group-item-action">Noemi</a>
       <a href="my-list.php?name=Vin" class="list-group-item list-group-item-action">Vin</a>
       <a href="my-list.php?name=Angie" class="list-group-item list-group-item-action">Angie</a>
