Use letter view

--- a/views/availableMaps.twig
+++ b/views/availableMaps.twig
@@ -8,7 +8,7 @@
 	    <!--</a><span class="pl-5"><small class="text-muted">{{ map.Name }}</small></span>-->
 	      </a>
 	    {% else %}
-	      <a  href="?Map={{ map.Map }}" role="button">
+	      <a  href="letter/?Map={{ map.Map }}" role="button">
 	  	    Map {{ map.Map }}
 	    <!--</a><span class="pl-5"><small class="text-muted">{{ map.Name }}</small></span>-->
 	      </a>
