--- a/views/letter/mapStreets.twig
+++ b/views/letter/mapStreets.twig
@@ -1,3 +1,5 @@
+<div id="alert"></div> 
+
 <div class="d-flex justify-content-between text-muted m-3">
   <div>
   	<h4>Map {{ mapNumber }}<small class="text-muted ml-1"> [locality]</small></h4>
@@ -8,8 +10,18 @@
          <i class="fas fa-ellipsis-v"></i>
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="index.php?Map=5&amp;Block=1">
-          Hand Map In
+
+
+<form ic-post-to="admin/map.php" ic-confirm="Are you sure?" ic-target="#alert">
+    <!--<form action="admin/map.php" method="POST">-->
+
+   <input type="hidden" name="id" value="<?php echo $MapAssignmentId; ?>">
+    <input type="hidden" name="cAH" value="<?php echo $Contacted; ?>">
+    <input type="hidden" name="Map" value="<?php echo $_GET['Map']; ?>">
+    <input class="btn btn-link dropdown-item" type="submit" name="unassign" value="Hand Map In">
+  </form>
+
+          
         </a>
       </div>
     </div>
@@ -42,5 +54,3 @@
     40% Complete
   </div>
 </div>
-
-
