Get locality from json

--- a/views/letter/mapStreets.twig
+++ b/views/letter/mapStreets.twig
@@ -2,7 +2,7 @@
 
 <div class="d-flex justify-content-between text-muted m-3">
   <div>
-  	<h4>Map {{ mapNumber }}<small class="text-muted ml-1"> [locality]</small></h4>
+  	<h4>Map {{ mapNumber }}<small class="text-muted ml-1"> {{ suburb }}</small></h4>
   </div>
   <div>
     <div class="dropdown">
