--- a/views/letter/mapStreets.twig
+++ b/views/letter/mapStreets.twig
@@ -50,7 +50,8 @@
 
 <div class="progress m-4">
   <div class="progress-bar bg-secondary progress-bar-striped active progress-bar-animated" role="progressbar"
-  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-    40% Complete
+  aria-valuenow="{{ progressPercentage }}" aria-valuemin="0" aria-valuemax="100" style="width:{{ progressPercentage }}%">
+    {{ progressPercentage }}% Complete
   </div>
 </div>
+
