Add map below progress bar

--- a/views/letter/mapStreets.twig
+++ b/views/letter/mapStreets.twig
@@ -55,3 +55,7 @@
   </div>
 </div>
 
+<div class="text-center">
+  <img src="https://skyricho.github.io/img/maps/{{ mapNumber }}.jpg" class="img-fluid">
+</div>
+
